--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:500,600,700&display=swap" rel="stylesheet">
-    <meta charset=“utf-8” name=“viewport” content=“width=device-width, initial-scale=1”>
-    <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="styles.css">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:500,600,700&display=swap" rel="stylesheet">
+      <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Activity Tracker</title>
   </head>
   <body>
